--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=root
 server.port=8080
 logging.level.org.springframework.web=ERROR
 logging.level.root = DEBUG
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
